@@ -9,6 +9,7 @@ Release 1.3
 #31 Execution: support for a map of arbitrary 'attributes'
 #32 Task stage listeners
 #33 SourceKeysTask: a task for extraction of source keys
+#34 Stop supporting positional parameters in Extractor templates
 
 
 Release 1.2 2014-12-08
